// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <withStyles(DateRangePicker)
    block={false}
    customArrowIcon={null}
    customCloseIcon={null}
    customInputIcon={null}
    disabled={false}
    enableOutsideDays={false}
    endDate={null}
    endDateId="expense_list_filters_end_date"
    firstDayOfWeek={null}
    focusedInput={null}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    initialVisibleMonth={null}
    isOutsideRange={[Function]}
    isRTL={false}
    keepFocusOnInput={false}
    keepOpenOnDateSelect={false}
    navNext={null}
    navPrev={null}
    noBorder={false}
    numberOfMonths={1}
    onDatesChange={[Function]}
    onFocusChange={[Function]}
    readOnly={false}
    regular={false}
    renderCalendarInfo={null}
    renderDayContents={null}
    renderMonth={null}
    reopenPickerOnClearDates={false}
    required={false}
    screenReaderInputMessage=""
    showClearDates={true}
    showDefaultInputIcon={false}
    small={false}
    startDate={null}
    startDateId="expense_list_filters_start_date"
    verticalHeight={null}
    withFullScreenPortal={false}
    withPortal={false}
  />
</div>
`;

exports[`should render ExpenseListFilters with alt data correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="bills"
  />
  <select
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <withStyles(DateRangePicker)
    block={false}
    customArrowIcon={null}
    customCloseIcon={null}
    customInputIcon={null}
    disabled={false}
    enableOutsideDays={false}
    endDate={"1970-01-04T00:00:00.000Z"}
    endDateId="expense_list_filters_end_date"
    firstDayOfWeek={null}
    focusedInput={null}
    hideKeyboardShortcutsPanel={false}
    horizontalMargin={0}
    initialVisibleMonth={null}
    isOutsideRange={[Function]}
    isRTL={false}
    keepFocusOnInput={false}
    keepOpenOnDateSelect={false}
    navNext={null}
    navPrev={null}
    noBorder={false}
    numberOfMonths={1}
    onDatesChange={[Function]}
    onFocusChange={[Function]}
    readOnly={false}
    regular={false}
    renderCalendarInfo={null}
    renderDayContents={null}
    renderMonth={null}
    reopenPickerOnClearDates={false}
    required={false}
    screenReaderInputMessage=""
    showClearDates={true}
    showDefaultInputIcon={false}
    small={false}
    startDate={"1970-01-01T00:00:00.000Z"}
    startDateId="expense_list_filters_start_date"
    verticalHeight={null}
    withFullScreenPortal={false}
    withPortal={false}
  />
</div>
`;
